Homescreen layout issues

--- a/PSMasterMind/app/styles/less/_index.less
+++ b/PSMasterMind/app/styles/less/_index.less
@@ -118,9 +118,6 @@ main {
 
   article {
     #content {
-      /* Account for the 40px margin due to being in a span */
-      padding: 0 124px 0 84px;
-
       #today {
         margin-top: 50px;
         font-size: 24px;
@@ -137,17 +134,9 @@ main {
       }
 
       .dashboard-widget {
-        width: 240px;
-        margin-right: 56px;
-        margin-left: 0;
-
-        &:last-child {
-          margin-right: 0;
-        }
-
+        
         .dashboard-box {
           box-sizing: border-box;
-          width: 240px;
           height: 206px;
           font-size: 137px;
           line-height: 206px;
